--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,3 +121,9 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// Adding vecotr icons
+project.ext.vectoricons = [
+    iconFontNames: [ 'Ionicons.ttf' ] // Specific fonts
+]
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
